[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memorial"
version = "0.0.1"
authors = [
  { name="Jet", email="taijunjet@hotmail.com" },
]
description = "Replay Buffer Implementations for RL"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "prefetch-generator"]
keywords = ["Machine Learning", "Reinforcement Learning"]
license = { file="./LICENSE.txt" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["memorial", "memorial.*"]

[project.urls]
"Homepage" = "https://github.com/jjshoots/Memorial"

[tool.pyright]
# This is required as the CI pre-commit does not download the module (i.e. numpy, pygame, box2d)
#   Therefore, we have to ignore missing imports
reportMissingImports = "none"

[tool.ruff.lint]
# pyflakes, pycodestyle, isort
ignore = ["D401", "D203", "D213"]
select = ["E4", "E7", "E9", "F", "I", "D"]
